<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_tours"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_from"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/search_tours"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:layout_marginTop="36dp"
        android:maxLines="1"
        android:paddingHorizontal="17dp"
        android:background="@drawable/edit_text_background_corner_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/search_to"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_background_corner_bottom"
        android:text="@string/to"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="17dp"
        android:maxLines="1"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_from" />

    <LinearLayout
        android:id="@+id/block_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_block_data"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/block_count"
        app:layout_constraintTop_toBottomOf="@id/search_to">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_date"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/block_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_block_count"
        android:orientation="vertical"
        android:layout_marginStart="1dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toEndOf="@id/block_data"
        app:layout_constraintTop_toBottomOf="@id/search_to"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/count_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_day"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/edit_text_background_corner_bottom"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_data"
        android:paddingVertical="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who_coming"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/count_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_people"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/search_tour"
        android:background="@drawable/background_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>